# AnaxiMap

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tilenames.py  tsdl.py
anaxitile/: __init__.py  tilenames.py  tsdl.py
src/anaximap/: tilenames.py  tsdl.py
